Fix overflow hidden issue on small viewports

--- a/scss/_modules/_section-outro.scss
+++ b/scss/_modules/_section-outro.scss
@@ -13,6 +13,7 @@
 .outro-information {
     margin-top: 170px;
     color: #D13031;
+    font-size: 15px;
     text-align: center;
 }
 
