--- a/scss/_modules/_sections.scss
+++ b/scss/_modules/_sections.scss
@@ -5,6 +5,7 @@
 .section {
     padding-right: 20px;
     padding-left: 20px;
+    overflow: hidden;
 }
 
 .section--intro {
